implementado los servicios para los horarios de campo deportivos

--- a/complejoapp/app/admin/notificaciones/notificaciones.view.html
+++ b/complejoapp/app/admin/notificaciones/notificaciones.view.html
@@ -19,7 +19,7 @@
                     <p class="small text-muted"><i class="fa fa-clock-o"></i> {{prereserva.fecha}}</p>
                     <p> <strong>Campo </strong>{{prereserva.nombrecampo}} </p>
                     <p>{{prereserva.inicio | horaFilter}}  -  {{prereserva.fin  | horaFilter}}</p>
-                    <p><strong>Precio </strong> {{prereserva.precio}} </p>
+                    <p><strong> </strong> {{prereserva.precio | currency}} </p>
                 </div>
             </div>
         </a>
