--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -108,6 +108,7 @@
 	<script src="app/servicios/usuario-funcion.service.js"></script>
 	<script src="app/servicios/prereserva.service.js"></script>
 	<script src="app/servicios/com-prereserva.service.js"></script>
+	<script src="app/servicios/horario.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
