--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -79,6 +79,7 @@
 	<script src="app/admin/impresion-factura/impresion-factura.controller.js"></script>
 	<script src="app/admin/confirmar-prereserva/prereserva.controller.js"></script>
 	<script src="app/admin/notificaciones/notificaciones.controller.js"></script>
+	<script src="app/admin/campo-deportivo/campo.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
