el administrador puede ver el reportes de canchas mas requeridas

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -22,6 +22,9 @@
 	<link rel="stylesheet" href="css/font-awesome.min.css">
 	<!-- <link rel="stylesheet" href="css/morris.css"> -->
 
+	<!-- MORRIS JS CHASRT STYLE -->
+	<link rel="stylesheet" href="lib/morris/morris.css">
+
 	<!-- ANGULAR JS NATIVE -->
 	<script src="lib/angular/angular1.4.7.min.js"></script>
 
@@ -80,6 +83,9 @@
 	<script src="app/admin/confirmar-prereserva/prereserva.controller.js"></script>
 	<script src="app/admin/notificaciones/notificaciones.controller.js"></script>
 	<script src="app/admin/campo-deportivo/campo.controller.js"></script>
+	<script src="app/admin/reportes/reportes.controller.js"></script>
+	<!-- servicio admin/reportes -->
+	<script src="app/admin/reportes/reportes.service.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -141,5 +147,11 @@
 	<script src="lib/pdfmake/vfs_fonts.js"></script>
 	<!-- NUMEROS A LETRAS -->
 	<script src="lib/numerosAletras/NumeroALetras.js"></script>
+
+	<!-- MORRIS JS CHARTS -->
+	<script src="lib/morris/raphael-min.js"></script>
+	<script src="lib/morris/morris.min.js"></script>
+	
+	<script src="lib/morris/angular-morris-chart.min.js"></script>
 </body>
 </html>
