--- a/complejoapp/app/admin/reportes/ganancias.view.html
+++ b/complejoapp/app/admin/reportes/ganancias.view.html
@@ -1,15 +1,13 @@
-<cd-cabecera-pagina nombrecomplejo="{{complejo.nombre}}" datospagina="vm.datospagina"></cd-cabecera-pagina>
-
-<div class="row">
+<div class="row" ng-controller="GananciasController as vm">
 	<div class="col-lg-12">
 		<div class="panel panel-default">
 			<div class="panel-heading">
-				<h3 class="panel-title"><i class="fa fa-fw fa-soccer-ball-o"></i>  Canchas Mas Requeridas</h3>
+				<h3 class="panel-title"><i class="fa fa-fw fa-bar-chart-o"></i>  Reporte de Ganancias</h3>
 			</div>
 			<div class="row">
 				
 				<div class="panel-body">
-					<div class="col-lg-3">
+					<div class="col-lg-2">
 						<h1 class="page-header">Gestion {{vm.gestion}}</h1>
 						<select ng-options="gestion as gestion for gestion in vm.gestiones" 
 								class="form-control" 
@@ -19,11 +17,15 @@
 						</select>
 					</div>
 
-					<div class="col-lg-9">
+					<div class="col-lg-10">
 						<div ng-if="vm.listo" 
-							donut-chart
-							donut-data='vm.data'
-							donut-resize='true'>
+							bar-chart 
+							bar-data='vm.datosGrafico'
+							bar-x='mes'
+							bar-y='["generado"]'
+							bar-labels='["Ganancia"]'
+							bar-colors='["#31C0BE"]'
+							bar-resize='true'>
 						</div>	
 						
 					</div>
@@ -33,16 +35,16 @@
 							<table class="table table-hover table-bordered">
 								<thead>
 									<tr>
-										<th>Campo Deportivo</th>
+										<th>Mes</th>
 										<th>Total Generado</th>
-										<th>Numero Reservas</th>
+										<th>Total Reservas</th>
 									</tr>
 								</thead>
 								<tbody>
-									<tr ng-repeat="reporte in vm.reportes">
-										<td>{{reporte.nombrecampo}}</td>
-										<td>{{reporte.totalgenerado | currency}}</td>
-										<td>{{reporte.numeroreservas}}</td>
+									<tr ng-repeat="ganancia in vm.reporteGanancia">
+										<td>{{ganancia.mes | textoMes}}</td>
+										<td>{{ganancia.generado | currency}}</td>
+										<td>{{ganancia.numeroreservas}}</td>
 									</tr>
 								</tbody>
 							</table>
@@ -53,5 +55,3 @@
 		</div>
 	</div>
 </div>
-
-<div ng-include="'app/admin/reportes/ganancias.view.html'"></div>
