--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -86,6 +86,7 @@
 	<script src="app/admin/reportes/reportes.controller.js"></script>
 	<!-- servicio admin/reportes -->
 	<script src="app/admin/reportes/reportes.service.js"></script>
+	<script src="app/admin/reportes/ganancias.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -127,6 +128,7 @@
 	<script src="common/hora-filtro/hora.filtro.js"></script>
 	<script src="common/sidebar-menu/sidebar-menu.directive.js"></script>
 	<script src="common/imagen-filtro/imagenFilter.js"></script>
+	<script src="common/textoMes-filtro/textoMesFilter.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
