--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -25,6 +25,9 @@
 	<!-- MORRIS JS CHASRT STYLE -->
 	<link rel="stylesheet" href="lib/morris/morris.css">
 
+	<!-- TEMPLATE PAGINA INICIO -->
+	<link rel="stylesheet" href="css/agency.css">
+
 	<title>Canchas</title>
 	
 
@@ -92,6 +95,7 @@
 	<script src="app/visitante/visitante.module.js"></script>
 	<script src="app/visitante/visitante.routes.js"></script>
 	<script src="app/visitante/login/login.controller.js"></script>
+	<script src="app/visitante/inicio/inicio.controller.js"></script>
 	
 	<!-- SCRIPTS MODULO CLIENTE -->
 	<script src="app/cliente/cliente.module.js"></script>
@@ -153,7 +157,7 @@
 	<!-- MORRIS JS CHARTS -->
 	<script src="lib/morris/raphael-min.js"></script>
 	<script src="lib/morris/morris.min.js"></script>
-	
 	<script src="lib/morris/angular-morris-chart.min.js"></script>
+
 </body>
 </html>
