integracion del formulario de inicio de sesion con la vista principal

--- a/complejoapp/app/visitante/inicio/inicio.view.html
+++ b/complejoapp/app/visitante/inicio/inicio.view.html
@@ -9,7 +9,8 @@
                 <div class="intro-heading hidden-xs">Administra tus reservas</div>
                 <div class="intro-heading visible-xs" style="font-size : 30px">Administra tus reservas</div>
 
-                <a href="" class="page-scroll btn btn-xl">Iniciar Sesion</a>
+                <a ui-sref="app.visitante.iniciosesion" class="page-scroll btn btn-xl">Iniciar Sesion</a>
+                <!-- <a class="" ui-sref="app.visitante.iniciosesion">Iniciar Sesion</a> -->
             </div>
         </div>
     </header>
