--- a/complejoapp/app/visitante/visitante.layout.html
+++ b/complejoapp/app/visitante/visitante.layout.html
@@ -1,9 +1,9 @@
-<div id="page-top" class="index" style="margin : 0px">
+<div id="page-top" class="index">
     
 
 <!-- Navigation -->
     <nav class="navbar navbar-default navbar-fixed-top" style="background-color: #222; padding : 0px;" style="margin:0px">
-        <div class="container" style="margin: 0px">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll" style="margin:0px">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" >
@@ -16,8 +16,8 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="margin:0px">
-                <ul class="nav navbar-nav navbar-right" style="margin:0px">
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <ul class="nav navbar-nav navbar-right">
                     
                     <li>
                         <a class="" ui-sref="app.visitante.iniciosesion">Iniciar</a>
@@ -39,5 +39,5 @@
     </nav>
 
     <!-- Punto de entrada a la ruta de visitante -->
-    <div ui-view style="margin:0px"></div>
+    <div ui-view></div>
 </div>
