--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -35,7 +35,7 @@
 <body>
 
 	<!-- VISTA PARA LAS RUTAS PRINCIPALES -->
-	<div ui-view></div>
+	<div ui-view style="margin: 0px"></div>
 	<!-- <a ui-sref="app.admin.inicio">inicio admin</a>
 	<a ui-sref="app.cliente.inicio">inicio cliente</a>
 	<a ui-sref="app.visitante.inicio">inicio visitante</a> -->
