--- a/complejoapp/app/visitante/login/login.html
+++ b/complejoapp/app/visitante/login/login.html
@@ -1,27 +1,39 @@
 <div class="container">
-
-	<form novalidate name="loginForm" ng-submit="submitLogin(user)">
-		<legend>Formulario de login</legend>
-	
-		<div class="form-group" ng-class="{'has-error': loginForm.nombreusuario.$invalid && !loginForm.nombreusuario.$pristine, 
-		'has-success' : loginForm.nombreusuario.$valid}"
-		>
-			<label class="control-label">Nombre Usuario</label>
-			<input type="text" class="form-control" name = "nombreusuario" ng-model="user.nombreusuario" required placeholder="Nombre de Usuario">
-			<p ng-show="loginForm.nombreusuario.$error.required" class="help-block">El nombre de usuario es requerido</p>
+	<section class="row">
+		<div class="col-lg-12 text-center">
+		    <h2 class="section-heading">Ingresar al Sistema</h2>
+		    <h3 class="section-subheading text-muted">Formulario de inicio de sesion.</h3>
 		</div>
 		
-		<div class="form-group" ng-class="{'has-error' : loginForm.contrasena.$invalid && !loginForm.contrasena.$pristine,
-		'has-success': loginForm.contrasena.$valid}">
-			<label class="control-label">Contrasena</label>
-			<input type="password" class="form-control" name= "contrasena" ng-model="user.contrasena" required placeholder="Contrasena">
-			<p ng-show="loginForm.contrasena.$error.required" class="help-block">La contrasenia es requerida</p>
-		</div>
-	
-		<button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Iniciar Sesion</button>
-	</form>
+	</section>
+</div>
 
-	<button type="button" class="btn btn-default" ng-click="salir()">button</button>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6 col-md-offset-3">
+			<form novalidate name="loginForm" ng-submit="submitLogin(user)">
+				<div class="form-group" ng-class="{'has-error': loginForm.nombreusuario.$invalid && !loginForm.nombreusuario.$pristine, 
+				'has-success' : loginForm.nombreusuario.$valid}"
+				>
+					<!-- <label class="control-label">Nombre Usuario</label> -->
+					<input type="text" class="form-control input-lg" name = "nombreusuario" ng-model="user.nombreusuario" required placeholder="Nombre de Usuario">
+					<p ng-show="loginForm.nombreusuario.$error.required && !loginForm.nombreusuario.$pristine" class="help-block">El nombre de usuario es requerido</p>
+				</div>
+				
+				<div class="form-group" ng-class="{'has-error' : loginForm.contrasena.$invalid && !loginForm.contrasena.$pristine,
+				'has-success': loginForm.contrasena.$valid}">
+					<!-- <label class="control-label">Contrasena</label> -->
+					<input type="password" class="form-control input-lg" name= "contrasena" ng-model="user.contrasena" required placeholder="Contrasena">
+					<p ng-show="loginForm.contrasena.$error.required && !loginForm.contrasena.$pristine" class="help-block">La contrasenia es requerida</p>
+				</div>
+			
+				<button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Iniciar Sesion</button>
+				<button type="button" class="btn btn-danger" ng-click="salir()">Cancelar</button>
+			</form>
+
+			
+		</div>
+	</div>
 	
 	
 </div>
