implementado la vista para realizar las busquedas

--- a/complejoapp/app/admin/campo-deportivo/campos.view.html
+++ b/complejoapp/app/admin/campo-deportivo/campos.view.html
@@ -8,7 +8,7 @@
 	                <img class="img-responsive img-circle" style="width : 100%; height: 250px;" ng-src="{{campo.foto | imagenFilter}}" alt="">
 	            </a>
 	        </div>
-	        <div class="col-lg-5">
+	        <div class="col-lg-5 text-center">
 	            <h3>{{campo.nombre}}</h3>
 	            <h4>{{campo.precio | currency}} por hora</h4>
 	            <p> <strong>Disciplina :</strong>  {{campo.disciplina}}</p>
