--- a/complejoapp/app/visitante/visitante.layout.html
+++ b/complejoapp/app/visitante/visitante.layout.html
@@ -23,7 +23,7 @@
                         <a class="" ui-sref="app.visitante.iniciosesion">Iniciar</a>
                     </li>
                     <li>
-                        <a class="" ui-sref="app.visitante.iniciosesion">Buscar Canchas</a>
+                        <a class="" ui-sref="app.visitante.busqueda">Buscar Canchas</a>
                     </li>
                     <li>
                         <a class="" ui-sref="app.visitante.iniciosesion">Registro</a>
