--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -96,6 +96,7 @@
 	<script src="app/visitante/visitante.routes.js"></script>
 	<script src="app/visitante/login/login.controller.js"></script>
 	<script src="app/visitante/inicio/inicio.controller.js"></script>
+	<script src="app/visitante/busqueda/busqueda.controller.js"></script>
 	
 	<!-- SCRIPTS MODULO CLIENTE -->
 	<script src="app/cliente/cliente.module.js"></script>
