--- a/complejoapp/app/visitante/busqueda/busqueda.view.html
+++ b/complejoapp/app/visitante/busqueda/busqueda.view.html
@@ -42,26 +42,31 @@
   <div class="row">
       <div class="col-lg-12">
         <ul class="timeline">
-            <li>
+            <li ng-repeat="complejo in vm.complejos" ng-class="{'timeline-inverted':complejo.invertido}">
                 <div class="timeline-image">
-                    <img class="img-circle img-responsive" src="img/3.jpg" alt="">
+                    <img class="img-circle img-responsive" style="width : 100%; height: 100%;" ng-src="{{complejo.foto | imagenFilter}}" alt="">
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>2009-2011</h4>
-                        <h4 class="subheading">Our Humble Beginnings</h4>
+                        <h4>{{complejo.nombre}}</h4>
+                        <h4 class="subheading">Telf. {{complejo.telefono}}</h4>
                     </div>
                     <div class="timeline-body">
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+
+                        <strong>Ciudad </strong><p class="text-muted"> {{complejo.ciudad}}</p>
+                        <strong>Direccion </strong><p class="text-muted"> {{complejo.direccion}}</p>
+                        <strong>Como Llegar </strong><p class="text-muted"> {{complejo.comollegar}}</p>
+                        <a class="btn btn-warning" ui-sref="app.admin.editar-campo({id : complejo.id})">Ver <span class="glyphicon glyphicon-chevron-right"></span></a>
                     </div>
                 </div>
+
             </li>
 
             <li class="timeline-inverted">
                 <div class="timeline-image">
                     <h4>Se Parte
-                        <br>de la
-                        <br>aplicacion!</h4>
+                        <br>de
+                        <br>CanchasSAAS!</h4>
                     </div>
             </li>
             </ul>
