los usuarios pueden buscar canchas por nombre de complejo y nombre de disciplina

--- a/complejoapp/app/visitante/busqueda/busqueda.view.html
+++ b/complejoapp/app/visitante/busqueda/busqueda.view.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="timeline-panel">
                     <div class="timeline-heading">
-                        <h4>{{complejo.nombre}}</h4>
+                        <h4>{{complejo.nombre}} </h4>
                         <h4 class="subheading">Telf. {{complejo.telefono}}</h4>
                     </div>
                     <div class="timeline-body">
@@ -56,7 +56,7 @@
                         <strong>Ciudad </strong><p class="text-muted"> {{complejo.ciudad}}</p>
                         <strong>Direccion </strong><p class="text-muted"> {{complejo.direccion}}</p>
                         <strong>Como Llegar </strong><p class="text-muted"> {{complejo.comollegar}}</p>
-                        <a class="btn btn-warning" ui-sref="app.admin.editar-campo({id : complejo.id})">Ver <span class="glyphicon glyphicon-chevron-right"></span></a>
+                        <a class="btn btn-warning" ui-sref="app.visitante.complejo({id : complejo.id})">Ver Canchas<span class="glyphicon glyphicon-chevron-right"></span></a>
                     </div>
                 </div>
 
