el administrador puede imprimir el reporte diario por reservas realizadas

--- a/complejoapp/app/admin/reportes/ganancias.view.html
+++ b/complejoapp/app/admin/reportes/ganancias.view.html
@@ -23,7 +23,7 @@
 							bar-data='vm.datosGrafico'
 							bar-x='mes'
 							bar-y='["generado"]'
-							bar-labels='["Ganancia"]'
+							bar-labels='["Ingreso"]'
 							bar-colors='["#31C0BE"]'
 							bar-resize='true'>
 						</div>	
@@ -36,7 +36,7 @@
 								<thead>
 									<tr>
 										<th>Mes</th>
-										<th>Total Generado</th>
+										<th>Total Ingresos</th>
 										<th>Total Reservas</th>
 									</tr>
 								</thead>
