--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -90,6 +90,7 @@
 	<!-- servicio admin/reportes -->
 	<script src="app/admin/reportes/reportes.service.js"></script>
 	<script src="app/admin/reportes/ganancias.controller.js"></script>
+	<script src="app/admin/reportes/diario.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
