--- a/complejoapp/app/admin/reportes/reportes.view.html
+++ b/complejoapp/app/admin/reportes/reportes.view.html
@@ -1,5 +1,7 @@
 <cd-cabecera-pagina nombrecomplejo="{{complejo.nombre}}" datospagina="vm.datospagina"></cd-cabecera-pagina>
 
+<div ng-include="'app/admin/reportes/diario.view.html'"></div>
+
 <div class="row">
 	<div class="col-lg-12">
 		<div class="panel panel-default">
