agregado el controlador y la vista para realizar registro de complejo

--- a/complejoapp/app/visitante/visitante.layout.html
+++ b/complejoapp/app/visitante/visitante.layout.html
@@ -39,7 +39,7 @@
                         <a class="hidden-xs" ui-sref="app.visitante.busqueda">Buscar Canchas</a>
                     </li>
                     <li>
-                        <a class="hidden-xs" ui-sref="app.visitante.iniciosesion">Registro</a>
+                        <a class="hidden-xs" ui-sref="app.visitante.registro">Registro</a>
                     </li>
                     <li>
                         <a class="hidden-xs" ui-sref="app.visitante.iniciosesion">Acerca</a>
