--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -100,6 +100,7 @@
 	<script src="app/visitante/busqueda/busqueda.controller.js"></script>
 	<script src="app/visitante/busqueda/busqueda.service.js"></script>
 	<script src="app/visitante/complejo/complejo.controller.js"></script>
+	<script src="app/visitante/registro/registro.controller.js"></script>
 	
 	<!-- SCRIPTS MODULO CLIENTE -->
 	<script src="app/cliente/cliente.module.js"></script>
