--- a/complejoapp/app/visitante/registro/registro.view.html
+++ b/complejoapp/app/visitante/registro/registro.view.html
@@ -1,5 +1,13 @@
 <div class="container">
 	<div class="row">
-		<h1>Registro</h1>
+		<h1>{{vm.titulo | uppercase}}</h1>
+		<div class="col-lg-6">
+			<div id="map" style="width: 100%;
+								height: 500px;
+								display: block">
+				
+			</div>
+			
+		</div>
 	</div>
 </div>
