--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -67,6 +67,9 @@
 	<!-- UI bootstrap -->
 	<script src="lib/ui-bootstrap/ui-bootstrap-0.14.2.min.js"></script>
 	<script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.14.2.min.js"></script>
+	
+	<!-- GOOGLE MAPS API -->
+	<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 	<script src="app/app.module.js"></script>
@@ -138,6 +141,9 @@
 	<script src="common/sidebar-menu/sidebar-menu.directive.js"></script>
 	<script src="common/imagen-filtro/imagenFilter.js"></script>
 	<script src="common/textoMes-filtro/textoMesFilter.js"></script>
+	<script src="common/utilidades-googlemaps/distancia.factory.js"></script>
+	<script src="common/utilidades-googlemaps/ubicacionService.factory.js"></script>
+	<script src="common/utilidades-googlemaps/geolocalizacion.factory.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
@@ -163,6 +169,7 @@
 	<script src="lib/morris/raphael-min.js"></script>
 	<script src="lib/morris/morris.min.js"></script>
 	<script src="lib/morris/angular-morris-chart.min.js"></script>
+	
 
 </body>
 </html>
