implementado el formulario de registro de complejos

--- a/complejoapp/app/visitante/login/login.html
+++ b/complejoapp/app/visitante/login/login.html
@@ -27,8 +27,8 @@
 					<p ng-show="loginForm.contrasena.$error.required && !loginForm.contrasena.$pristine" class="help-block">La contrasenia es requerida</p>
 				</div>
 			
-				<button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Iniciar Sesion</button>
-				<button type="button" class="btn btn-danger" ng-click="salir()">Cancelar</button>
+				<button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary btn-lg">Iniciar Sesion</button>
+				<button type="button" class="btn btn-danger btn-lg" ng-click="salir()">Cancelar</button>
 			</form>
 
 			
