--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -144,6 +144,7 @@
 	<script src="common/utilidades-googlemaps/distancia.factory.js"></script>
 	<script src="common/utilidades-googlemaps/ubicacionService.factory.js"></script>
 	<script src="common/utilidades-googlemaps/geolocalizacion.factory.js"></script>
+	<script src="common/utilidades-googlemaps/mapa.directive.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
