arreglado el menu de inicio, para distpositivos moviles

--- a/complejoapp/app/visitante/visitante.layout.html
+++ b/complejoapp/app/visitante/visitante.layout.html
@@ -26,7 +26,7 @@
                         <a class="visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" ui-sref="app.visitante.busqueda">Buscar Canchas</a>
                     </li>
                     <li>
-                        <a class="visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" ui-sref="app.visitante.iniciosesion">Registro</a>
+                        <a class="visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" ui-sref="app.visitante.registro">Registro</a>
                     </li>
                     <li>
                         <a class="visible-xs" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" ui-sref="app.visitante.iniciosesion">Acerca</a>
