implementado la carga de marcadores en el mapa para todos los complejos deportivos

--- a/complejoapp/app/visitante/registro/registro.view.html
+++ b/complejoapp/app/visitante/registro/registro.view.html
@@ -70,10 +70,10 @@
 			<div class="col-md-6">
 				<div class="alert alert-info" style="margin-bottom : 0px">
 				    <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-				    <strong>Busque la ubicacion de su complejo</strong> una vez localizado su "ubicacion", presione sobre este
+				    <strong>Busque la ubicacion de su complejo, </strong> luego presione sobre el
 				</div>
 
-				<cd-mapa lat="vm.complejo.latitud" lng="vm.complejo.longitud" ubicacion="vm.complejo.ubicacion"></cd-mapa>
+				<cd-mapa lat="vm.complejo.latitud" lng="vm.complejo.longitud" ubicacion="vm.complejo.ubicacion" complejos="vm.complejos"></cd-mapa>
 				
 				<div class="alert alert-success" ng-show="vm.complejo.latitud">
 					<button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
