--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -146,6 +146,7 @@
 	<script src="common/utilidades-googlemaps/geolocalizacion.factory.js"></script>
 	<script src="common/utilidades-googlemaps/mapa.directive.js"></script>
 	<script src="common/subir-archivo/subir-imagen.directive.js"></script>
+	<script src="common/utilidades-googlemaps/mapsService.factory.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
