--- a/complejoapp/app/visitante/inicio/inicio.view.html
+++ b/complejoapp/app/visitante/inicio/inicio.view.html
@@ -16,4 +16,19 @@
     </header>
 
 <!-- Esta es la pagina de inicio <a ui-sref="app.visitante.iniciosesion">Iniciar Sesion</a> -->
+<div class="container">
+    <section class="row" style="margin: 0px;">
+        <div class="col-lg-12 text-center" style="margin: 0px">
+          <h2 class="section-heading" >Conplejos que forman parte de Canchas SAAS</h2>
+          <h3 class="section-subheading text-muted">Presione sobre los marcadores para mas informacion</h3>
+        </div>
+    </section>
+
+    <div class="row">
+        <div class="col-lg-8 col-lg-offset-2" style="margin-bottom: 50px">
+            <cd-mapa lat="vm.complejo.latitud" lng="vm.complejo.longitud" ubicacion="vm.complejo.ubicacion" complejos="vm.complejos"></cd-mapa>
+        </div>
+    </div>
+   
+</div>
     
