--- a/complejoapp/app/visitante/inicio/inicio.view.html
+++ b/complejoapp/app/visitante/inicio/inicio.view.html
@@ -19,7 +19,7 @@
 <div class="container">
     <section class="row" style="margin: 0px;">
         <div class="col-lg-12 text-center" style="margin: 0px">
-          <h2 class="section-heading" >Conplejos que forman parte de Canchas SAAS</h2>
+          <h2 class="section-heading" >Complejos que forman parte de Canchas SAAS</h2>
           <h3 class="section-subheading text-muted">Presione sobre los marcadores para mas informacion</h3>
         </div>
     </section>
