--- a/complejoapp/common/subir-archivo/subir-archivo.directive.html
+++ b/complejoapp/common/subir-archivo/subir-archivo.directive.html
@@ -1,5 +1,5 @@
 <div>
-	<h4>Seleccionar Imagen</h4>
+	<h4>Nueva Imagen</h4>
 	<span class="btn btn-success btn-file">
     	Buscar Archivo <input id="subir-archivo" type="file">
 	</span>	
