--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -111,6 +111,7 @@
 	<script src="app/cliente/cliente-layout.controller.js"></script>
 	<script src="app/cliente/prereserva/prereserva.controller.js"></script>
 	<script src="app/cliente/prereserva/cliente-complejo.service.js"></script>
+	<script src="app/cliente/inicio/inicio.controller.js"></script>
 
 	<!-- SCRIPTS MODULO SERVICIOS -->
 	<script src="app/servicios/servicios.module.js"></script>
