--- a/complejoapp/app/admin/registro-campo/registro-campo.view.html
+++ b/complejoapp/app/admin/registro-campo/registro-campo.view.html
@@ -50,6 +50,10 @@
 							</form>
 						</div>
 						<div class="col-lg-6">
+							<div ng-if="mostrar">
+								<h4>Imagen Actual</h4>
+								<img class="img-responsive img-rounded" style="width : 100%; height: 100px;" ng-src="{{campo.foto | imagenFilter}}" alt="">
+							</div>
 							<cd-subir-archivo></cs-subir-archivo>
 						</div>
 					</div>	
