--- a/complejoapp/app/admin/reserva-especial/reserva-especial.view.html
+++ b/complejoapp/app/admin/reserva-especial/reserva-especial.view.html
@@ -9,7 +9,7 @@
 	<div ng-if="!vm.listo" class="col-lg-12">
 		<div class="panel panel-primary">
 				<div class="panel-heading">
-					<h3 class="panel-title"><i class="fa fa-fw fa-edit"></i>Formulario Reserva Especial</h3>
+					<h3 class="panel-title"><i class="fa fa-fw fa-edit"></i>Formulario Reserva Administrativa</h3>
 				</div>
 
 				<div class="row">
