--- a/complejoapp/common/calendario/calendario.view.html
+++ b/complejoapp/common/calendario/calendario.view.html
@@ -1,13 +1,23 @@
 <div class="calendario">
-
 	<div class="row">
-		<div class="col-md-12">
-
+		<div class="col-sm-4">
 			<select class="form-control" ng-model="campoSeleccionado"
 	        ng-change="actualizarReservas(campoSeleccionado)" 
 	        ng-options="campo as campo.nombre for campo in  campos">
 	        </select>
-
+			
+		</div>
+		<div class="col-sm-2">
+			
+		</div>
+		<div class="col-sm-6">
+			<img class="img-responsive img-rounded" style="width : 100%; height: 100px;" ng-src="{{campoSeleccionado.foto | imagenFilter}}" alt="">
+		</div>
+		
+	</div>
+	<h4>Horarios</h4>
+	<div class="row">
+		<div class="col-md-12">
 			<div class="btn-group btn-group-justified" role="group" aria-label="...">
 				<div class="btn-group" role="group">
 				<button type="button" class="btn btn-default" id="anterior">Anterior</button>
